# project-vela

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  justfile  secretspec.toml
.github/ISSUE_TEMPLATE/: 01-milestone-tracker.md  02-parity-slice.md  02-vertical-slice.md  03-behavior-regression.md  03-parity-regression.md  04-parity-proof.md  04-verification-proof.md  config.yml
.github/workflows/: ci.yml
apps/vela/: Cargo.toml
apps/vela/src/: cli.rs  commands.rs  main.rs
apps/vela/src/commands/: interactive.rs  memory_skills_review.rs  runtime_ops.rs
apps/vela/tests/: cli_verification.rs
corpus/development/: 0001-vela-dev-workspace.json  0002-development-record-validation.json  0003-corpus-inspection.json  0004-secretspec-integration.json  0005-typed-event-log.json  0006-decode-error-compatibility.json  0007-event-log-error-sources.json  0008-replay-error-sources.json  0009-payload-version-validation.json  0010-authoritative-replay-discriminator.json  0011-empty-event-type-validation.json  0012-wal-mode-enforcement.json  0013-stored-payload-version.json  0014-zero-stored-stream-version.json  0015-zero-stored-payload-version.json  0016-empty-stored-event-type.json  0017-invalid-current-stream-version.json  0018-exact-zero-expected-version.json  0019-stale-append-preflight.json  0020-exhausted-stream-preflight.json  0021-hidden-invalid-stream-version.json  0022-append-version-gap.json  0023-first-missing-append-gap.json  0024-persisted-task-lifecycle.json  0025-persisted-task-completion.json  0026-persisted-task-cancellation.json  0027-persisted-task-failure.json  0028-diagnosed-terminal.json  0029-completion-output.json  0030-cancellation-reason.json  0031-session-creation.json  0032-session-close.json  0033-session-reopen.json  0034-session-close-reason.json  0035-session-reopen-reason.json  0036-session-rename.json  0037-session-summary.json  0038-session-association.json  0039-session-membership.json  0040-session-list.json  (+16 more)
crates/vela-compat/: Cargo.toml
crates/vela-config/: Cargo.toml
crates/vela-dev/: Cargo.toml
crates/vela-dev/src/: lib.rs  main.rs  record.rs
crates/vela-dev/tests/: cli.rs  record.rs
crates/vela-dev/tests/fixtures/: invalid-record.json  valid-record.json
crates/vela-dev/tests/fixtures/corpus/invalid/: semantic.json
crates/vela-dev/tests/fixtures/corpus/valid/: second.json
crates/vela-dev/tests/fixtures/corpus/valid/nested/: first.json
crates/vela-extensions/: Cargo.toml
crates/vela-kernel/: Cargo.toml
crates/vela-kernel/src/: event_log.rs  lib.rs  runtime.rs  session.rs  task.rs  tool.rs
crates/vela-kernel/tests/: assistant_runtime.rs  durable_tool_invocations.rs  event_log.rs  session_conversation.rs  session_lifecycle.rs  task_assistant_runtime.rs  task_lifecycle.rs  task_observations.rs  task_session_association.rs  tool_permissions.rs  tool_registry.rs  tool_task_association.rs
crates/vela-memory/: Cargo.toml
crates/vela-models/: Cargo.toml
crates/vela-review/: Cargo.toml
crates/vela-runtime/: Cargo.toml
crates/vela-runtime/src/: lib.rs  ops.rs  provider.rs  scheduler.rs  surface.rs  tests.rs
crates/vela-skills/: Cargo.toml
crates/vela-state/: Cargo.toml
crates/vela-tools/: Cargo.toml
docs/: assistant-runtime.md  development-record-v1.md  event-log.md  first-start.md  hermes-rust-parity-plan.md  install-run.md  project-vela-visual.html  session-lifecycle.md  task-lifecycle.md  tool-permissions.md  vela-crate-layout.md  vela-rust-agentic-os-plan.md  vela-rust-parity-plan.md  vela-schema.md
plans/: 00-north-star.md  01-architecture-research.md  02-rust-dataset-understanding.md  03-rust-corpus-strategy.md  04-assistant-first-rust-mentor.md
scripts/: advance_tracker.py
tests/: secretspec-integration.sh
(+49 files in other folders)
