[package]
name = "vela"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vela-compat = { path = "../../crates/vela-compat" }
vela-runtime = { path = "../../crates/vela-runtime" }
