[package]
name = "vela-dev"
description = "Developer tooling for Project Vela"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
