[package]
name = "vela-kernel"
description = "Small, inspectable kernel primitives for Project Vela"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.20"
