[package]
name = "vela-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
llama-cpp-2 = { version = "0.1.151", default-features = false }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
vela-config = { path = "../vela-config" }
vela-memory = { path = "../vela-memory" }
vela-skills = { path = "../vela-skills" }
vela-review = { path = "../vela-review" }
vela-state = { path = "../vela-state" }
vela-extensions = { path = "../vela-extensions" }
